Добавил 2 блока с Хаджем и Умрой

--- a/darelsalam/index.html
+++ b/darelsalam/index.html
@@ -59,7 +59,7 @@
                                 <i class="fa fa-subway"></i>
                               </div>
                               <div class="content">
-                                <span itemprop="streetAddress">м. Парк Культуры, м. Смоленская</span>
+                                <span itemprop="subwayAddress">м. Парк Культуры, м. Смоленская</span>
                               </div>
                             </div>
                           </div>
@@ -309,41 +309,143 @@
           <div class='container'>
             <div class='panels-wrapper'>
               <div class='row panels'>
-                <div class='col-sm-4 panel-item'>
-                  <a class='panel panel-image' href='#'>
-                    <div class='panel-icon'>
-                      <i class='fa fa-clock-o icon'></i>
-                    </div>
-                    <div class='panel-heading'><img class="img-responsive-sm" alt="Project planning" width="768" height="300" src="http://placehold.it/768x300" /></div>
+                <div class='col-sm-5 col-sm-offset-1 panel-item'>
+                  <div class="panel-item__top-title">
+                    <a href="javascript:void(0)">Хадж</a>
+                  </div>
+                  <div class='panel panel-image'>
+                    <div class='panel-heading'><img class="img-responsive-sm" alt="Хадж" width="458" height="137" src="assets/images/panels/hajj.jpg" /></div>
                     <div class='panel-body'>
-                      <h3 class='panel-title'>Project planning</h3>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu pharetra felis.est.</p>
+                      <a href="javascript:void(0)" class="panel-body__list-item">
+                        <div class="row">
+                          <div class="col-xs-2">
+                            <div class="panel-body__list-item-icon">
+                              <img class="img-responsive" src="assets/images/icons/kaaba-mini.jpg" alt="">
+                            </div>
+                          </div>
+                          <div class="col-xs-10">
+                            <h3 class='panel-title'>10 ночей Рамадана</h3>
+                            <div class="panel-body__list-item-text">
+                              5 ночей в Movenpick Hotel (5 звёзд) - Медина
+                              <br>
+                              5 ночей в Al Shohada Hotel (5 звёзд) - Мекка
+                              <br>
+                              С 6 по 17 июля 2013 г. От 1895 долл.
+                            </div>
+                          </div>
+                        </div>
+                      </a>
+                      <a href="javascript:void(0)" class="panel-body__list-item">
+                        <div class="row">
+                          <div class="col-xs-2">
+                            <div class="panel-body__list-item-icon">
+                              <img class="img-responsive" src="assets/images/icons/kaaba-mini.jpg" alt="">
+                            </div>
+                          </div>
+                          <div class="col-xs-10">
+                            <h3 class='panel-title'>5 ночей Рамадана</h3>
+                            <div class="panel-body__list-item-text">
+                              2 ночей в Movenpick Hotel (5 звёзд) - Медина
+                              <br>
+                              3 ночей в Al Shohada Hotel (5 звёзд) - Мекка
+                              <br>
+                              С 6 по 17 июля 2013 г. От 1895 долл.
+                            </div>
+                          </div>
+                        </div>
+                      </a>
+                      <a href="javascript:void(0)" class="panel-body__list-item">
+                        <div class="row">
+                          <div class="col-xs-2">
+                            <div class="panel-body__list-item-icon">
+                              <img class="img-responsive" src="assets/images/icons/kaaba-mini.jpg" alt="">
+                            </div>
+                          </div>
+                          <div class="col-xs-10">
+                            <h3 class='panel-title'>3 ночи Рамадана</h3>
+                            <div class="panel-body__list-item-text">
+                              1 ночей в Movenpick Hotel (5 звёзд) - Медина
+                              <br>
+                              2 ночей в Al Shohada Hotel (5 звёзд) - Мекка
+                              <br>
+                              С 6 по 17 июля 2013 г. От 1895 долл.
+                            </div>
+                          </div>
+                        </div>
+                      </a>
+                      <p class="text-center">Выберите интересующую вас программу,
+                      <br> чтобы узнать подробности.</p>
                     </div>
-                  </a>
+                  </div>
                 </div>
-                <div class='col-sm-4 panel-item'>
-                  <a class='panel panel-image' href='#'>
-                    <div class='panel-icon'>
-                      <i class='fa fa-cog icon'></i>
-                    </div>
-                    <div class='panel-heading'><img class="img-responsive-sm" alt="Easy customizable" width="768" height="300" src="http://placehold.it/768x300" /></div>
+                <div class='col-sm-5 panel-item'>
+                  <div class="panel-item__top-title">
+                    <a href="javascript:void(0)">Умра</a>
+                  </div>
+                  <div class='panel panel-image'>
+                    <div class='panel-heading'><img class="img-responsive-sm" alt="Easy customizable" width="768" height="300" src="assets/images/panels/umra.jpg" /></div>
                     <div class='panel-body'>
-                      <h3 class='panel-title'>Easy customizable</h3>
-                      <p>Etiam init rutrum ligula semper neque relu dapibus, non tempus mauris sodales.est.</p>
+                      <a href="javascript:void(0)" class="panel-body__list-item">
+                        <div class="row">
+                          <div class="col-xs-2">
+                            <div class="panel-body__list-item-icon">
+                              <img class="img-responsive" src="assets/images/icons/kaaba-mini.jpg" alt="">
+                            </div>
+                          </div>
+                          <div class="col-xs-10">
+                            <h3 class='panel-title'>10 ночей Рамадана</h3>
+                            <div class="panel-body__list-item-text">
+                              5 ночей в Movenpick Hotel (5 звёзд) - Медина
+                              <br>
+                              5 ночей в Al Shohada Hotel (5 звёзд) - Мекка
+                              <br>
+                              С 6 по 17 июля 2013 г. От 1895 долл.
+                            </div>
+                          </div>
+                        </div>
+                      </a>
+                      <a href="javascript:void(0)" class="panel-body__list-item">
+                        <div class="row">
+                          <div class="col-xs-2">
+                            <div class="panel-body__list-item-icon">
+                              <img class="img-responsive" src="assets/images/icons/kaaba-mini.jpg" alt="">
+                            </div>
+                          </div>
+                          <div class="col-xs-10">
+                            <h3 class='panel-title'>5 ночей Рамадана</h3>
+                            <div class="panel-body__list-item-text">
+                              2 ночей в Movenpick Hotel (5 звёзд) - Медина
+                              <br>
+                              3 ночей в Al Shohada Hotel (5 звёзд) - Мекка
+                              <br>
+                              С 6 по 17 июля 2013 г. От 1895 долл.
+                            </div>
+                          </div>
+                        </div>
+                      </a>
+                      <a href="javascript:void(0)" class="panel-body__list-item">
+                        <div class="row">
+                          <div class="col-xs-2">
+                            <div class="panel-body__list-item-icon">
+                              <img class="img-responsive" src="assets/images/icons/kaaba-mini.jpg" alt="">
+                            </div>
+                          </div>
+                          <div class="col-xs-10">
+                            <h3 class='panel-title'>3 ночи Рамадана</h3>
+                            <div class="panel-body__list-item-text">
+                              1 ночей в Movenpick Hotel (5 звёзд) - Медина
+                              <br>
+                              2 ночей в Al Shohada Hotel (5 звёзд) - Мекка
+                              <br>
+                              С 6 по 17 июля 2013 г. От 1895 долл.
+                            </div>
+                          </div>
+                        </div>
+                      </a>
+                      <p class="text-center">Выберите интересующую вас программу,
+                      <br> чтобы узнать подробности.</p>
                     </div>
-                  </a>
-                </div>
-                <div class='col-sm-4 panel-item'>
-                  <a class='panel panel-image' href='#'>
-                    <div class='panel-icon'>
-                      <i class='fa fa-rocket icon'></i>
-                    </div>
-                    <div class='panel-heading'><img class="img-responsive-sm" alt="Fastest workers" width="768" height="300" src="http://placehold.it/768x300" /></div>
-                    <div class='panel-body'>
-                      <h3 class='panel-title'>Fastest workers</h3>
-                      <p>Pellentesque id neque sit amet nibh placerat suscipit et a purus, mauris id.</p>
-                    </div>
-                  </a>
+                  </div>
                 </div>
               </div>
             </div>
