--- a/darelsalam/_index.html
+++ b/darelsalam/_index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--
+  Name: Jednotka - Multipurpose Website HTML Template
+  Author: Bublina Studio - www.bublinastudio.com, info@bublinastudio.com
+  Version: 1.8
+-->
 <!--[if lt IE 9]> <html class="lt-ie9" lang="en"> <![endif]-->
 <!--[if !IE] -->
 <html lang='ru'>
@@ -113,25 +118,15 @@
               </div>
               <div class='collapse navbar-collapse navbar-header-collapse'>
                 <ul class='nav navbar-nav navbar-right'>
-                  <li class="active">
-                    <a href='index.html'>
-                      <span>
-                        Главная
-                      </span>
-                    </a>
-                  </li>
-                  <li class='dropdown'>
+                  <li class='active dropdown'>
                     <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='#'>
                       <span>
-                        Хадж
+                        Главная
                         <i class='fa fa-angle-down'></i>
                       </span>
                     </a>
                     <ul class='dropdown-menu' role='menu'>
-                      <li class=''>
-                        <a href='hajj.html'>Хадж 2017</a>
-                      </li>
-                      <li class=''>
+                      <li class='active dropdown-submenu'>
                         <a href='index.html'>Home</a>
                       </li>
                       <li class=''>
@@ -143,6 +138,16 @@
                       <li class=''>
                         <a href='boxed.html'>Boxed layout</a>
                       </li>
+                    </ul>
+                  </li>
+                  <li class='dropdown'>
+                    <a class='dropdown-toggle' data-delay='50' data-hover='dropdown' data-toggle='dropdown' href='#'>
+                      <span>
+                        Хадж
+                        <i class='fa fa-angle-down'></i>
+                      </span>
+                    </a>
+                    <ul class='dropdown-menu' role='menu'>
                       <li class=''>
                         <a href='about_us.html'>About us</a>
                       </li>
@@ -444,6 +449,146 @@
                 </div>
               </div>
             </div>
+            <div class='row'>
+              <div class='col-sm-12'>
+                <div class='page-header page-header-with-icon'>
+                  <i class='fa fa-star'></i>
+                  <h2>Top features</h2>
+                </div>
+                <div class='text-boxes'>
+                  <div class='row text-box'>
+                    <div class='col-sm-6'><img class="img-responsive center-block" alt="Lorem ipsum dolor sit amet" width="340" height="188" src="http://placehold.it/340x188" /></div>
+                    <div class='col-sm-6'>
+                      <h3 class='title'><a href="#">Lorem ipsum dolor sit amet</a></h3>
+                      <p>Mauris at ultricies eros. Morbi vel dui nec arcu suscipit euismod. Phasellus pellentesque lectus eget quam ullamcorper consectetur. Vestibulum vitae risus a erat mollis lac in venenatis tellus. Morbi et tristique lacus.</p>
+                      <a class='btn btn-contrast btn-bordered btn-sm' href='#'>Read more</a>
+                    </div>
+                  </div>
+                  <hr>
+                  <div class='row text-box'>
+                    <div class='col-sm-6 col-sm-push-6'><img class="img-responsive center-block" alt="Praesent vitae adipiscing nunc" width="330" height="183" src="http://placehold.it/330x183" /></div>
+                    <div class='col-sm-6 col-sm-pull-6'>
+                      <h3 class='title'><a href="#">Praesent vitae adipiscing nunc</a></h3>
+                      <p>Integer fringtilla fringilla mauris eget accumsan. Nullam quis consequat ipsum, eu cursus mi. Donec quis quam at risus viverra venenatis. Phasellus non nulla tortor. Fusce congue enim sed ullamcorper cursus. Donec tincidunt elit sed felis iaculis laoreet.</p>
+                      <a class='btn btn-contrast btn-bordered btn-sm' href='#'>Read more</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class='row'>
+              <div class='col-sm-12'>
+                <div class='page-header page-header-with-icon'>
+                  <i class='fa fa-suitcase'></i>
+                  <h2>
+                    Our last projects
+                    <small>Phasellus malesuada sapien non orci semper gravida.</small>
+                  </h2>
+                </div>
+                <div class='row portfolio-boxes'>
+                  <div class='col-sm-3 col-xs-6 no-mb-t-xs portfolio-box'>
+                    <a class='image-link' href='portfolio_detail.html'>
+                      <i class='fa fa-search'></i>
+                      <img class="img-responsive img-rounded center-block" alt="Etiam vestibulum" width="262" height="262" src="http://placehold.it/262x262" />
+                    </a>
+                    <h3 class='title'>Etiam vestibulum</h3>
+                    <p class='category'>Photography</p>
+                  </div>
+                  <div class='col-sm-3 col-xs-6 no-mb-t-xs portfolio-box'>
+                    <a class='image-link' href='portfolio_detail.html'>
+                      <i class='fa fa-link'></i>
+                      <img class="img-responsive img-rounded center-block" alt="Malesuada" width="262" height="262" src="http://placehold.it/262x262" />
+                    </a>
+                    <h3 class='title'>Malesuada</h3>
+                    <p class='category'>Webdesign</p>
+                  </div>
+                  <div class='col-sm-3 col-xs-6 portfolio-box'>
+                    <a href='portfolio_detail.html'>
+                      <div class='image-link'>
+                        <i class='fa fa-search'></i>
+                        <img class="img-responsive img-rounded center-block" alt="Dictum vulputate" width="262" height="262" src="http://placehold.it/262x262" />
+                      </div>
+                      <h3 class='title'>Dictum vulputate</h3>
+                      <p class='category'>Identity</p>
+                    </a>
+                  </div>
+                  <div class='col-sm-3 col-xs-6 portfolio-box'>
+                    <a href='portfolio_detail.html'>
+                      <div class='image-link'>
+                        <i class='fa fa-search'></i>
+                        <img class="img-responsive img-rounded center-block" alt="Semper massa" width="262" height="262" src="http://placehold.it/262x262" />
+                      </div>
+                      <h3 class='title'>Semper massa</h3>
+                      <p class='category'>Marketing</p>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class='row'>
+              <div class='col-sm-12'>
+                <div class='page-header page-header-with-icon'>
+                  <i class='fa fa-quote-right'></i>
+                  <h2>Testimonials</h2>
+                </div>
+                <div class='row quotes'>
+                  <div class='carousel carousel-default slide carousel-auto' id='carousel-testimonials'>
+                    <div class='carousel-inner'>
+                      <div class='item active quote'>
+                        <div class='col-sm-12 text-center'>
+                          <p class='lead'>Mauris at ultricies eros. Morbi vel dui nec arcu suscipit euismod. Phasellus pellentesque lectus eget quam ullamcorper consectetur. Vestibulum vitae risus a erat mollis lac in venenatis tellus.</p>
+                          <div class='author-wrapper'>
+                            <p class='author'>
+                              <strong>John Doe</strong>,
+                              Company name
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class='item quote'>
+                        <div class='col-sm-12 text-center'>
+                          <p class='lead'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent accumsan leo tellus. Nulla fringilla elementum nisl, vitae faucibus risus. Donec ut tristique eros. Curabitur mattis auctor turpis.</p>
+                          <div class='author-wrapper'>
+                            <p class='author'>
+                              <strong>Michal Marek</strong>,
+                              Bublina Studio
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class='item quote'>
+                        <div class='col-sm-12 text-center'>
+                          <p class='lead'>Aenean lorem quam, dapibus et enim vel, ultrices tincidunt tellus. Donec mattis massa et lacus interdum lobortis. Pellentesque habitant morbi tristique senectus. Curabitur mattis auctor turpis.</p>
+                          <div class='author-wrapper'>
+                            <p class='author'>
+                              <strong>Paľo Delinčák</strong>,
+                              Bublina Studio
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+                      <div class='item quote'>
+                        <div class='col-sm-12 text-center'>
+                          <p class='lead'>Integer quis placerat leo, sit amet varius odio. Fusce sollicitudin metus eu eros egestas cursus ut ullamcorper augue. Integer blandit tellus a urna semper, sit amet tempor orci ornare. Mauris nec.</p>
+                          <div class='author-wrapper'>
+                            <p class='author'>
+                              <strong>Jane Doe</strong>,
+                              Company name
+                            </p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <ol class='carousel-indicators'>
+                      <li class='active' data-slide-to='0' data-target='#carousel-testimonials'></li>
+                      <li data-slide-to='1' data-target='#carousel-testimonials'></li>
+                      <li data-slide-to='2' data-target='#carousel-testimonials'></li>
+                      <li data-slide-to='3' data-target='#carousel-testimonials'></li>
+                    </ol>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <div class='fade' id='scroll-to-top'>
@@ -456,21 +601,21 @@
             <div class='row'>
               <div class='col-md-3 col-sm-6 info-box'>
                 <div class='logo-container'>
-                  <img alt="Дар Эль Салам" class="img-responsive" width="230" height="34" src="assets/images/logos/dar-el-salam-logo-white.png" />
+                  <img alt="Jednotka" width="117" height="39" src="assets/images/logo.svg" />
                 </div>
-                <p class='no-mg-b'>Нашей задачей является – ваша полная подготовка к Хаджу, сопровождение вас во время всей поездки и предоставление вам консультаций по обрядам хаджа, во время всего путешествия.</p>
+                <p class='no-mg-b'>Integer vulputate porta augue, sit amet interdum tellus commodo et. Sed volutpat neque vel turpis ultrices sini bibendum. Aliquam quis malesuada.</p>
               </div>
               <div class='col-md-3 col-sm-6 info-box'>
-                <h2 class='title'>Контакты</h2>
+                <h2 class='title'>Contact</h2>
                 <div class='icon-boxes'>
                   <div class='icon-box'>
                     <div class='icon icon-wrap'>
                       <i class='fa fa-map-marker'></i>
                     </div>
                     <div class='content'>
-                      г. Москва 
+                      4567 Street name,
                       <br>
-                      Смоленский бульвар д. 22/14
+                      012 12 City name, Country
                     </div>
                   </div>
                   <div class='icon-box'>
@@ -478,68 +623,71 @@
                       <i class='fa fa-phone'></i>
                     </div>
                     <div class='content'>
-                      <a href='tel:+74951338208'>+7 (495) 133-82-08 </a>
-                    </div>
-                  </div>
-                  <div class='icon-box'>
-                    <div class='icon icon-wrap'>
-                      <i class='fa fa-phone'></i>
-                    </div>
-                    <div class='content'>
-                      <a href='tel:+79253335777'>+7 (925) 333-57-77</a>
+                      <a href='tel:+012345678'>+012 345 678</a>
                     </div>
                   </div>
                   <div class='icon-box'>
                     <div class='icon icon-wrap'>
                       <i class='fa fa-envelope'></i>
                     </div>
+                    <div class='content'><a href="mailto:info@bublinastudio.com">info@bublinastudio.com</a></div>
+                  </div>
+                  <div class='icon-box'>
+                    <div class='icon icon-wrap'>
+                      <i class='fa fa-globe'></i>
+                    </div>
+                    <div class='content'><a href="#">www.bublinastudio.com</a></div>
+                  </div>
+                </div>
+              </div>
+              <div class='col-md-3 col-sm-6 info-box social-box'>
+                <h2 class='title'>Latest tweets</h2>
+                <div class='icon-boxes'>
+                  <div class='icon-box'>
+                    <div class='icon icon-wrap'>
+                      <i class='fa fa-twitter text-contrast'></i>
+                    </div>
                     <div class='content'>
-                      <a itemprop="email" href="mailto:admin@darelsalam.ru">admin@darelsalam.ru</a>
+                      <p>
+                        Phasellus vulputate lobortis sem. Mauris id velit in urna.
+                        <br>
+                        <a class='time' href='#'>
+                          <i>1 hour ago</i>
+                        </a>
+                      </p>
+                    </div>
+                  </div>
+                  <div class='icon-box'>
+                    <div class='icon icon-wrap'>
+                      <i class='fa fa-twitter text-contrast'></i>
+                    </div>
+                    <div class='content'>
+                      <p>
+                        Etiam luctus, dui congue tempus blandit, dui.
+                        <br>
+                        <a class='time' href='#'>
+                          <i>3 hours ago</i>
+                        </a>
+                      </p>
                     </div>
                   </div>
                 </div>
               </div>
               <div class='col-md-3 col-sm-6 info-box'>
-                <h2 class='title'>Разделы</h2>
-                <ul class='list-unstyled list-padded'>
-                  <li>
-                    <i class='fa fa-angle-right fa fa-fixed-width text-contrast'></i>
-                    <a href="#">Хадж</a>
-                  </li>
-                  <li>
-                    <i class='fa fa-angle-right fa fa-fixed-width text-contrast'></i>
-                    <a href="#">Умра</a>
-                  </li>
-                  <li>
-                    <i class='fa fa-angle-right fa fa-fixed-width text-contrast'></i>
-                    <a href="#">В помощь поломникам</a>
-                  </li>
-                  <li>
-                    <i class='fa fa-angle-right fa fa-fixed-width text-contrast'></i>
-                    <a href="#">Галерея</a>
-                  </li>
-                  <li>
-                    <i class='fa fa-angle-right fa fa-fixed-width text-contrast'></i>
-                    <a href="#">Хадж Миссия России</a>
-                  </li>
-                </ul>
-              </div>
-              <div class='col-md-3 col-sm-6 info-box'>
-                <h2 class='title'>Компания</h2>
-                <ul class='list-unstyled list-padded'>
-                  <li>
-                    <i class='fa fa-angle-right fa fa-fixed-width text-contrast'></i>
-                    <a href="#">О компании</a>
-                  </li>
-                  <li>
-                    <i class='fa fa-angle-right fa fa-fixed-width text-contrast'></i>
-                    <a href="#">Частые вопросы</a>
-                  </li>
-                  <li>
-                    <i class='fa fa-angle-right fa fa-fixed-width text-contrast'></i>
-                    <a href="#">Написать нам</a>
-                  </li>
-                </ul>
+                <h2 class='title'>Newsletter</h2>
+                <p>Proin condimentum, nisi vel vestibulum ultricies, nunc elit.</p>
+                <form action='index.html' class='form-inline form-validation' method='get'>
+                  <div class='row'>
+                    <div class='form-group control-group col-xs-9 col-md-8 col-lg-9'>
+                      <input class='form-control' data-rule-email='true' data-rule-required='true' id='newsletter_email' name='newsletter[email]' placeholder='Email address' type='email'>
+                    </div>
+                    <div class='col-xs-3 col-md-4 col-lg-3'>
+                      <button class='btn btn-medium-light btn-block' type='submit'>
+                        <i class='fa fa-reply text-white'></i>
+                      </button>
+                    </div>
+                  </div>
+                </form>
               </div>
             </div>
           </div>
@@ -549,18 +697,19 @@
             <div class='row'>
               <div class='col-lg-12 clearfix'>
                 <p class='copyright'>
+                  Copyright
                   &copy;
-                  2017 Дар Эль Салам - Хадж и Умра
+                  2013 Jednotka
                 </p>
                 <div class='links'>
                   <a class='btn btn-circle btn-medium-light btn-sm' href='#'>
-                    <i class='fa fa-facebook text-dark'></i>
-                  </a>
-                  <a class='btn btn-circle btn-medium-light btn-sm' href='#'>
-                    <i class='fa fa-instagram text-dark'></i>
-                  </a>
-                  <a class='btn btn-circle btn-medium-light btn-sm' href='#'>
                     <i class='fa fa-twitter text-dark'></i>
+                  </a>
+                  <a class='btn btn-circle btn-medium-light btn-sm' href='#'>
+                    <i class='fa fa-dribbble text-dark'></i>
+                  </a>
+                  <a class='btn btn-circle btn-medium-light btn-sm' href='#'>
+                    <i class='fa fa-facebook text-dark'></i>
                   </a>
                 </div>
               </div>
